--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "react": "^16.8.3",
+    "react-alice-carousel": "^1.13.1",
     "react-burgers": "^1.2.0",
     "react-dom": "^16.8.3",
     "react-fontawesome": "^1.6.1",
