--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "react": "^16.8.3",
-    "react-alice-carousel": "^1.13.1",
     "react-burgers": "^1.2.0",
     "react-dom": "^16.8.3",
     "react-fontawesome": "^1.6.1",
@@ -19,6 +18,7 @@
     "react-responsive-carousel": "^3.1.47",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-slick": "^0.23.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "uninstall": "0.0.0",
